[gd_scene load_steps=20 format=3 uid="uid://dma5rffw75fnx"]

[ext_resource type="Script" uid="uid://g0ppbfkxl8kx" path="res://scenes/entities/upgrade_option/upgrade_option.gd" id="1_2nlm7"]
[ext_resource type="PackedScene" uid="uid://bp8s8r2vsohgh" path="res://scenes/components/health_component.tscn" id="1_q6tin"]
[ext_resource type="PackedScene" uid="uid://dniiamg0dyruo" path="res://scenes/components/hurtbox_component.tscn" id="2_2nlm7"]
[ext_resource type="AudioStream" uid="uid://1hmbycmqghia" path="res://assets/audio/hit_1.wav" id="3_me62g"]
[ext_resource type="Texture2D" uid="uid://d2nostq60e3mu" path="res://assets/upgrades/upgrade_option.png" id="3_ovbw4"]
[ext_resource type="AudioStream" uid="uid://doae36omumbj3" path="res://assets/audio/hit_2.wav" id="4_kwkwj"]
[ext_resource type="PackedScene" uid="uid://6eu845hi2djh" path="res://scenes/components/hit_flash_sprite_component.tscn" id="5_gkiwt"]
[ext_resource type="AudioStream" uid="uid://c1hykljgaxcbi" path="res://assets/audio/hit_3.wav" id="5_vabns"]
[ext_resource type="Shader" uid="uid://cah6ohv57bi6p" path="res://resources/shaders/hit_flash.gdshader" id="6_ocfif"]
[ext_resource type="AudioStream" uid="uid://cealdtp227qx" path="res://assets/audio/hit_4.wav" id="6_wxu6h"]

[sub_resource type="Animation" id="Animation_gkiwt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitFlashSpriteComponent:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ocfif"]
resource_name = "despawn"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.5),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8), Vector2(1.5, 1.5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_ovbw4"]
resource_name = "idle"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitFlashSpriteComponent:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1.5, 0.5),
"update": 0,
"values": [Vector2(0, -16), Vector2(0, -20)]
}

[sub_resource type="Animation" id="Animation_325oq"]
resource_name = "spawn"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(0.5, 2, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.5, 1.5), Vector2(0.8, 0.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ocfif"]
_data = {
&"RESET": SubResource("Animation_gkiwt"),
&"despawn": SubResource("Animation_ocfif"),
&"idle": SubResource("Animation_ovbw4"),
&"spawn": SubResource("Animation_325oq")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_me62g"]
random_pitch = 1.1
random_volume_offset_db = 1.0
streams_count = 4
stream_0/stream = ExtResource("3_me62g")
stream_1/stream = ExtResource("4_kwkwj")
stream_2/stream = ExtResource("5_vabns")
stream_3/stream = ExtResource("6_wxu6h")

[sub_resource type="CircleShape2D" id="CircleShape2D_325oq"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gkiwt"]
radius = 32.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gkiwt"]
resource_local_to_scene = true
shader = ExtResource("6_ocfif")
shader_parameter/percent = 0.0

[node name="UpgradeOption" type="Node2D" groups=["UpgradeOption"]]
script = ExtResource("1_2nlm7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ocfif")
}
next/spawn = &"idle"

[node name="HealthComponent" parent="." instance=ExtResource("1_q6tin")]
max_health = 10

[node name="HitStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_me62g")
volume_db = -1.0
max_polyphony = 3
bus = &"SFX"

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_2nlm7")]
position = Vector2(0, -16)
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_325oq")

[node name="PlayerDetectionArea" type="Area2D" parent="."]
position = Vector2(0, -16)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource("CircleShape2D_gkiwt")

[node name="HitFlashSpriteComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_gkiwt")]
material = SubResource("ShaderMaterial_gkiwt")
position = Vector2(0, -16)
texture = ExtResource("3_ovbw4")
health_component = NodePath("../HealthComponent")

[node name="InfoContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(192, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -80.0
offset_right = 96.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="TitleLabel" type="Label" parent="InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.831373, 0.172549, 0.309804, 1)
theme_override_constants/outline_size = 4
text = "Example Title"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="InfoContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 4
text = "Example description. This is a sentence."
horizontal_alignment = 1
autowrap_mode = 2
